--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 
-    <title>Ludovic Network</title>
+    <title>Storm social Network</title>
   </head>
   <body>
 
